# clinic-scheduler

./: .gitignore  README.md  package.json
ClinicScheduler/: ClinicScheduler.slnx
ClinicScheduler/ClinicScheduler/: App.xaml  App.xaml.cs  ClinicScheduler.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
ClinicScheduler/ClinicScheduler.Core/: Class1.cs
ClinicScheduler/ClinicScheduler.Core/Entities/: Appointment.cs  AppointmentStatus.cs  Location.cs  Patient.cs  Room.cs  Therapist.cs  TherapyType.cs  TreatmentPlan.cs  TreatmentPlanTherapy.cs
ClinicScheduler/ClinicScheduler.Core/Interfaces/: IRepository.cs
ClinicScheduler/ClinicScheduler.Infrastructure/: Class1.cs  ClinicScheduler.Infrastructure.csproj
ClinicScheduler/ClinicScheduler.Infrastructure/Data/: ClinicDbContext.cs  Repository.cs
ClinicScheduler/ClinicScheduler.Infrastructure/Migrations/: 20260307005959_InitialCreate.Designer.cs  20260307005959_InitialCreate.cs  ClinicDbContextModelSnapshot.cs
ClinicScheduler/ClinicScheduler.Shared/: ClinicScheduler.Shared.csproj  _Imports.razor
ClinicScheduler/ClinicScheduler.Shared/Layout/: NavMenu.razor
ClinicScheduler/ClinicScheduler.Shared/Pages/: Home.razor
ClinicScheduler/ClinicScheduler.Shared/Services/: IFormFactor.cs
ClinicScheduler/ClinicScheduler.Web/: ClinicScheduler.Web.csproj  Program.cs  appsettings.Development.json
ClinicScheduler/ClinicScheduler.Web.Client/: ClinicScheduler.Web.Client.csproj  Program.cs  _Imports.razor
backend/: pyproject.toml
backend/core/: settings.py
frontend/: package.json
(+41 files in other folders)
